# llm-vibe-coding-evaluator

./: .gitignore  README.md  analyze_results.py  pyproject.toml  requirements.txt  run_evaluation.py
.github/workflows/: ci.yml
data/: tasks.json
results/: Qwen__Qwen2.5-Coder-32B-Instruct.csv  meta-llama__Llama-3.1-8B-Instruct.csv
results/report/: summary.json
src/llm_vibe_eval/: analytics_engine.py  dataset_manager.py  llm_client.py  models.py  sandbox_evaluator.py
tests/: test_analytics_engine.py  test_dataset_manager.py  test_sandbox_evaluator.py
