[project]
name = "llm-vibe-coding-evaluator"
version = "0.1.0"
description = "Experimentally evaluates the safety, correctness, and hallucination rates of LLM-generated code on algorithmic tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
